--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
     position: absolute;
 }
 
-#map_wrapper {
+#super_wrapper {
     width : 100%;
     height: 100%;
 
@@ -29,3 +29,45 @@
   
     z-index: 1;
   }
+
+#map_wrapper {
+    display: flex;
+    flex-direction: row;
+}
+
+#RegionSelectorWrapper{
+    position: absolute;
+    
+    box-sizing: border-box;
+
+    left: 0%;
+    width : 20%;
+    height: 100%;
+
+    background-color: #e3e3e3;
+    border: 3px solid #676767;
+}
+
+#TrashbagPriceInfo{
+    position: absolute;
+    
+    box-sizing: border-box;
+
+    bottom: 0%;
+    width : 100%;
+    height: 20%;
+
+
+    background-color: #e3e3e3;
+    border: 3px solid #676767;
+
+    transition: .3s;
+}
+
+.left_n20 {
+    left: -20%;
+}
+
+.left_0{
+    left: 0%;
+}
