--- a/src/index.css
+++ b/src/index.css
@@ -35,19 +35,6 @@
     flex-direction: row;
 }
 
-#RegionSelectorWrapper{
-    position: absolute;
-    
-    box-sizing: border-box;
-
-    left: 0%;
-    width : 20%;
-    height: 100%;
-
-    background-color: #e3e3e3;
-    border: 3px solid #676767;
-}
-
 #RegionInfo{
     position: absolute;
     
@@ -77,10 +64,38 @@
     transition: .3s;
 }
 
-.left_n20 {
-    left: -20%;
+#RegionSelectorWrapper{
+    position: absolute;
+    
+    box-sizing: border-box;
+
+    width : 300px;
+    height: 100%;
+
+    background-color: #e3e3e3;
+    border: 3px solid #676767;
 }
 
-.left_0{
-    left: 0%;
+.left_n300px {
+    left: -300px;
+
+    transition: .3s;
+}
+
+.left_0px{
+    left: 0px;
+
+    transition: .3s;
+}
+
+.toTransparent{
+    opacity: 0;
+
+    transition : .3s
+}
+
+.toVisible{
+    opacity: 1;
+
+    transition: .3s
 }
