--- a/src/index.css
+++ b/src/index.css
@@ -99,3 +99,16 @@
 
     transition: .3s
 }
+
+#LoadingWindow{
+    position: absolute;
+    
+    box-sizing: border-box;
+    
+    bottom: 0%;
+
+    width : 100%;
+    height : 30px;
+
+    background-color: #e3e3e3;
+}
