--- a/src/index.css
+++ b/src/index.css
@@ -89,6 +89,11 @@
     border: 3px solid #676767;
 }
 
+.baseBox{
+    background-color: #e3e3e3;
+    border: 3px solid #676767;
+}
+
 .left_n300px {
     left: -300px;
 
