--- a/src/index.css
+++ b/src/index.css
@@ -53,7 +53,12 @@
     
     box-sizing: border-box;
 
-    right: 0%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    right: 1%;
+    top : 1%;
     width : 200px;
     height: 100px;
 
@@ -135,8 +140,7 @@
 }
 
 #LoadingWindow{
-    position: absolute;
-    
+    position : absolute;
     box-sizing: border-box;
     
     bottom: 0%;
@@ -151,7 +155,6 @@
     position: absolute;
     box-sizing: border-box;
     
-
     bottom: 0%;
     width : 100%;
 
@@ -161,6 +164,15 @@
 
 .baseflex{
     display: flex;
+}
+
+.textCenter{
+    text-align : center;
+}
+
+.width100per{
+    position:relative;
+    width : 100%;
 }
 
 .size_80_80 {
@@ -175,10 +187,24 @@
 
 .fontBlackHanSans {
     font-family: 'Black Han Sans', sans-serif;
-    color: #AAA9A9;
 }
 
 .fontNanumGothic {
     font-family: 'Nanum Gothic', sans-serif;
+}
+
+.fontSize24px{
+    font-size: 20px;
+}
+
+.fontSize32px{
+    font-size: 32px;
+}
+
+.fontColorLight{
     color : #AAA9A9;
+}
+
+.fontColorBlack{
+    color: #676767;
 }
