--- a/src/index.css
+++ b/src/index.css
@@ -46,6 +46,8 @@
 #MapWrapper {
     display: flex;
     flex-direction: row;
+
+    height: 100%;
 }
 
 #LocationName{
@@ -87,7 +89,6 @@
     
     box-sizing: border-box;
 
-    width : 300px;
     height: 100%;
 
     background-color: #e3e3e3;
