--- a/src/index.css
+++ b/src/index.css
@@ -112,6 +112,18 @@
     transition: .3s;
 }
 
+.toRight_300px{
+    right : 300px;
+
+    transition : .3s;
+}
+
+.toRight_100px{
+    right : 100px;
+
+    transition : .3s;
+}
+
 .toTransparent{
     opacity: 0;
 
@@ -140,6 +152,12 @@
     transition: .3s;
 }
 
+.toWidth0{
+    width: 0;
+
+    transition : .3s;
+}
+
 #LoadingWindow{
     position : absolute;
     box-sizing: border-box;
@@ -163,6 +181,14 @@
     border: 3px solid #676767;
 
     overflow-y: scroll;
+}
+
+.MapController{
+    position :fixed;
+    box-sizing: border-box;
+
+    bottom: 10px;
+    right: 10px;
 }
 
 .baseflex{
