--- a/src/index.css
+++ b/src/index.css
@@ -237,3 +237,27 @@
 .fontColorBlack{
     color: #676767;
 }
+
+
+
+
+
+
+
+
+
+[type=radio] { 
+    position: absolute;
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+/* IMAGE STYLES */
+[type=radio] + img {
+    cursor: pointer;
+  }
+  
+  /* CHECKED STYLES */
+  [type=radio]:checked + img {
+    outline: 2px solid #f00;
+  }
