--- a/src/index.css
+++ b/src/index.css
@@ -152,6 +152,11 @@
     transition: .3s;
 }
 
+.toHeight20p{
+    height : 20%;
+    transition : .3s;
+}
+
 .toWidth0{
     width: 0;
 
@@ -161,13 +166,22 @@
 #LoadingWindow{
     position : absolute;
     box-sizing: border-box;
-    
-    bottom: 0%;
 
-    width : 100%;
-    height : 30px;
-
-    background-color: #e3e3e3;
+    -webkit-animation:spin 4s linear infinite;
+    -moz-animation:spin 4s linear infinite;
+    animation:spin 4s linear infinite;
+}
+@-moz-keyframes spin { 
+    100% { -moz-transform: rotate(360deg); } 
+}
+@-webkit-keyframes spin { 
+    100% { -webkit-transform: rotate(360deg); } 
+}
+@keyframes spin { 
+    100% { 
+        -webkit-transform: rotate(360deg); 
+        transform:rotate(360deg); 
+    } 
 }
 
 #PriceResult {
@@ -195,8 +209,16 @@
     display: flex;
 }
 
+.tipmargin{
+    margin : 3px;
+}
+
 .textCenter{
     text-align : center;
+}
+
+.divCenter{
+    align-items: center;
 }
 
 .width100per{
@@ -263,7 +285,18 @@
 
 .search {
     background-color: transparent;
-    border : 0;
+    border: 0;
     outline : 0;
-    bottom : 0;
+    height :10vmin;
+
+    position: absolute;
+    bottom: 0;
+
+    cursor: pointer;
 }
+
+
+.material-icons.md-18 { font-size: 18px; }
+.material-icons.md-24 { font-size: 24px; }
+.material-icons.md-36 { font-size: 36px; }
+.material-icons.md-48 { font-size: 48px; }
