--- a/src/index.css
+++ b/src/index.css
@@ -190,9 +190,17 @@
     background-color: #e3e3e3;
 }
 
-.RibbonCategory{
+.TopRibbonItem{
     position : relative;
     height : 100%;
+
+    background-color: transparent;
+    transition: .3s;
+}
+
+.TopRibbonItem:hover{
+    background-color: #8A8989;
+    transition: .3s;
 }
 
 #LoadingWindow{
