--- a/src/index.css
+++ b/src/index.css
@@ -203,6 +203,18 @@
     transition: .3s;
 }
 
+#UserNotice{
+    position : absolute;
+    box-sizing: border-box;
+
+    top : 5%;
+    left : auto;
+    right : auto;
+
+    background-color: #e3e3e3;
+    border: 3px solid #676767;
+}
+
 #LoadingWindow{
     position : absolute;
     box-sizing: border-box;
